--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,7 @@
 
 .hash {
   color: #134fe6;
+  cursor: pointer;
 }
 
 .hash_green:hover {
@@ -33,6 +34,11 @@
 
 .author {
   color: #134fe6;
+  cursor: pointer;
+}
+
+.author-date {
+  font-weight: bold;
 }
 
 .author:hover {
@@ -42,7 +48,7 @@
 .defs {
   padding-left: 32px;
   padding-top: 32px;
-  width: 66.66667%;
+  width: 100%;
 }
 
 .single_def {
@@ -53,24 +59,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
   margin-left: -2em;
   margin-right: -2em;
   padding-left: 2em;
   padding-right: 3em;
   background-color: #efff00;
   height: 72px;
-  width: 75%;
-  padding-left: 32px;
+  width: 100%;
   padding-top: 32px;
+  cursor: pointer;
 }
 
 .mug-image {
   height: 91px;
   width: 125px;
+  margin-right: 30%;
+  margin-bottom: 35%;
 }
 
 .mug-text {
-  padding-bottom: 28px;
+  flex: 1;
+  padding-bottom: 30px;
   align-items: left;
   color: black;
   font-size: 18px;
